--- a/_sass/theme/_air_dark.scss
+++ b/_sass/theme/_air_dark.scss
@@ -154,7 +154,7 @@ html[data-theme="dark"] {
     a[href^="http://"]:not([href*="localhost"]):not([href*="127.0.0.1"]):not([href*="github.io"]),
     a[href^="https://"]:not([href*="localhost"]):not([href*="127.0.0.1"]):not([href*="github.io"]) {
         &::after {
-            content: " ↗";
+            content: " \2197";
             font-size: 0.8em;
             opacity: 0.7;
         }
